err/perfwhiz.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/perfwhiz'...
Compiling './lib/python3.5/site-packages/perfwhiz/mkcdict_perf_script.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/mkcdict_perf_script.py", line 80
    print 'Initializing plugin...'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/perfwhiz/mkcdict_plugin.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/mkcdict_plugin.py", line 87
    print 'Plugin loaded with %d service chain names from Nova' % (count)
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/perfwhiz/perf_formatter.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/perf_formatter.py", line 41
    print 'Initializing plugin...'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/perfwhiz/perfcap.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/perfcap.py", line 47
    print 'Using default qemu task name mapping (no plugin found)'
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/perfwhiz/perfmap.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/perfmap.py", line 70
    print 'No selection matching the task ' + task
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/perfwhiz/perfmap_common.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/perfmap_common.py", line 122
    print 'No selection matching the task ' + task
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/perfwhiz/perfmap_core.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/perfmap_core.py", line 100
    print 'No selection matching "%s"' % (task_re)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/perfwhiz/perfmap_kvm_exit_types.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/perfmap_kvm_exit_types.py", line 136
    print 'Warning: counts for %s will be multiplied by %f' % \
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/perfwhiz/perfmap_sw_kvm_exits.py'...
***   File "./lib/python3.5/site-packages/perfwhiz/perfmap_sw_kvm_exits.py", line 82
    print 'Series for %s display truncated to 50000 events' % (event)
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/perfwhiz-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
